fix(player): progress jump on track change

--- a/components/Player/PlayerProgress/PlayerProgress.module.scss
+++ b/components/Player/PlayerProgress/PlayerProgress.module.scss
@@ -49,7 +49,7 @@ $playerProgress-gap: 20px;
     width: 100%;
     height: var(--track-size);
 
-    transform: translateX(calc(var(--progress) * 100%));
+    transform: translateX(calc(var(--progress, 0) * 100%));
 
     background-color: var(--accent-color, var(--playerProgress-progress-color));
 
